<resources>
    <string name="app_name">MeetingApp</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="remember_account">Remember account</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="msg_token_fmt">msg_token</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal">Personal</string>
    <string name="video_call">Video Call</string>
    <string name="messenger">Messenger</string>
    <string name="chat_with_friends">Chat with friends</string>
    <string name="call_video_with_friends">Call video with friends</string>
</resources>