<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:context=".activities.SignUpActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_signup"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textSize="@dimen/_30ssp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/_40sdp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_edittext"
        app:layout_constraintBottom_toTopOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_45sdp"
        android:hint="@string/name"
        android:inputType="text"
        tools:ignore="LabelFor,RtlCompat,RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/inputName"
        app:layout_constraintTop_toTopOf="@id/inputName"
        app:layout_constraintBottom_toBottomOf="@id/inputName"
        android:layout_marginStart="@dimen/_10sdp"
        tools:ignore="RtlCompat"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/app_name" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_btn"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/white"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:contentDescription="@string/app_name"
        tools:ignore="RtlCompat"
        tools:targetApi="lollipop" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_edittext"
        app:layout_constraintBottom_toTopOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_45sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,RtlCompat,RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/inputEmail"
        app:layout_constraintTop_toTopOf="@id/inputEmail"
        app:layout_constraintBottom_toBottomOf="@id/inputEmail"
        android:layout_marginStart="@dimen/_10sdp"
        tools:ignore="RtlCompat"
        android:src="@drawable/ic_email"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_edittext"
        app:layout_constraintBottom_toTopOf="@id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        android:paddingStart="@dimen/_45sdp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,RtlCompat,RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/inputPassword"
        app:layout_constraintTop_toTopOf="@id/inputPassword"
        app:layout_constraintBottom_toBottomOf="@id/inputPassword"
        android:layout_marginStart="@dimen/_10sdp"
        tools:ignore="RtlCompat"
        android:src="@drawable/ic_password"
        android:contentDescription="@string/app_name" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        android:paddingStart="@dimen/_45sdp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,RtlCompat,RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/inputConfirmPassword"
        app:layout_constraintTop_toTopOf="@id/inputConfirmPassword"
        app:layout_constraintBottom_toBottomOf="@id/inputConfirmPassword"
        android:layout_marginStart="@dimen/_10sdp"
        tools:ignore="RtlCompat"
        android:src="@drawable/ic_password"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_sign_up"
        app:layout_constraintTop_toBottomOf="@id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/primary_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_25sdp"
        app:layout_constraintCircle="@id/inputConfirmPassword"
        app:layout_constraintCircleRadius="@dimen/_100sdp"
        app:layout_constraintCircleAngle="180"
        android:paddingEnd="@dimen/_25sdp"
        android:text="@string/sign_up"

        />

</androidx.constraintlayout.widget.ConstraintLayout>